--- a/package.json
+++ b/package.json
@@ -4,15 +4,22 @@
     "main": "dist/index.js",
     "scripts": {
         "start": "tsc && node dist/index.js",
-        "build": "tsc"
+        "build": "tsc",
+        "test": "node test/index.js"
     },
     "repository": "https://github.com/LunaryBot/LunaryAPI.git",
     "author": "JVOPINHO",
     "license": "AGPL-3.0",
     "dependencies": {
+        "@types/express": "^4.17.13",
+        "@types/firebase": "^3.2.1",
+        "@types/socket.io": "^3.0.2",
+        "cors": "^2.8.5",
+        "dotenv": "^14.3.2",
         "express": "^4.17.2",
         "firebase": "8.8.1",
         "socket.io": "^4.4.1",
+        "socket.io-client": "^4.4.1",
         "typescript": "^4.5.5"
     }
 }
