--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@types/express": "^4.17.13",
         "@types/firebase": "^3.2.1",
         "@types/socket.io": "^3.0.2",
+        "axios": "^0.25.0",
         "cors": "^2.8.5",
         "dotenv": "^14.3.2",
         "express": "^4.17.2",
