--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@types/socket.io": "^3.0.2",
         "axios": "^0.25.0",
         "cors": "^2.8.5",
+        "discord.js": "12.5.1",
         "dotenv": "^14.3.2",
         "express": "^4.17.2",
         "firebase": "8.8.1",
