--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
-    "name": "lunaryapi",
-    "version": "1.0.0",
-    "main": "dist/index.js",
-    "scripts": {
-        "start": "tsc && node dist/index.js",
-        "build": "tsc",
-        "test": "node test/index.js"
-    },
-    "repository": "https://github.com/LunaryBot/LunaryAPI.git",
-    "author": "JVOPINHO",
-    "license": "AGPL-3.0",
-    "dependencies": {
-        "@types/express": "^4.17.13",
-        "@types/firebase": "^3.2.1",
-        "@types/socket.io": "^3.0.2",
-        "axios": "^0.25.0",
-        "cors": "^2.8.5",
-        "discord.js": "12.5.1",
-        "dotenv": "^14.3.2",
-        "express": "^4.17.2",
-        "firebase": "8.8.1",
-        "socket.io": "^4.4.1",
-        "socket.io-client": "^4.4.1",
-        "typescript": "^4.5.5"
-    }
+	"name": "lunaryapi",
+	"version": "2.0.0",
+	"main": "dist/index.js",
+	"scripts": {
+		"dev": "tsc && node dist/index.js",
+		"build": "tsc",
+		"start": "node dist/index.js",
+		"test": "node test/index.js"
+	},
+	"repository": "https://github.com/lunarybot/lunaryapi",
+	"author": "JVOPINHO",
+	"license": "AGPL-3.0",
+	"dependencies": {
+		"cors": "^2.8.5",
+		"dotenv": "^16.0.0",
+		"express": "^4.17.3",
+		"ws": "^8.5.0"
+	},
+	"devDependencies": {
+		"@types/express": "^4.17.13",
+		"@types/ws": "^8.5.3",
+		"typescript": "^4.6.3"
+	}
 }
