--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	"devDependencies": {
 		"@types/express": "^4.17.13",
 		"@types/ws": "^8.5.3",
+		"jest": "^27.5.1",
 		"typescript": "^4.6.3"
 	}
 }
