--- a/package.json
+++ b/package.json
@@ -6,19 +6,23 @@
 		"dev": "tsc && node dist/index.js",
 		"build": "tsc",
 		"start": "node dist/index.js",
-		"test": "node test/index.js"
+		"test": "jest"
 	},
 	"repository": "https://github.com/lunarybot/lunaryapi",
 	"author": "JVOPINHO",
 	"license": "AGPL-3.0",
 	"dependencies": {
+		"axios": "^0.26.1",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
+		"firebase": "8.8.1",
+		"form-data": "^4.0.0",
 		"ws": "^8.5.0"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.13",
+		"@types/firebase": "^3.2.1",
 		"@types/ws": "^8.5.3",
 		"jest": "^27.5.1",
 		"typescript": "^4.6.3"
