--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
 		"axios": "^0.26.1",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.0",
+		"eris": "^0.16.1",
 		"express": "^4.17.3",
 		"firebase": "8.8.1",
 		"form-data": "^4.0.0",
+		"jsonwebtoken": "^8.5.1",
 		"ws": "^8.5.0"
 	},
 	"devDependencies": {
