Starting with jwt

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,6 @@
         "forceConsistentCasingInFileNames": true,
         "outDir": "dist",
         "resolveJsonModule": true,
-        "typeRoots": ["./src/@types"]
+        "typeRoots": ["./src/@types", "./node_modules/@types"],
     }
 }
