--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	"devDependencies": {
 		"@types/express": "^4.17.13",
 		"@types/firebase": "^3.2.1",
+		"@types/jsonwebtoken": "^8.5.8",
 		"@types/ws": "^8.5.3",
 		"jest": "^27.5.1",
 		"typescript": "^4.6.3"
