Changing build of `tsconfig.json`

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
 	"name": "lunaryapi",
 	"version": "2.0.0",
-	"main": "dist/index.js",
+	"main": "build/index.js",
 	"scripts": {
-		"dev": "tsc && node dist/index.js",
+		"dev": "tsc && node build/index.js",
 		"build": "tsc",
-		"start": "node dist/index.js",
+		"start": "node build/index.js",
 		"test": "jest"
 	},
 	"repository": "https://github.com/lunarybot/lunaryapi",
