--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,27 @@
+
 {
     "compilerOptions": {
+        "target": "ES2019", 
+        "module": "CommonJS",
+        "lib": ["ES6"],
+        "rootDir": "./src",
+        "outDir": "./build",
+        "removeComments": true,
         "strict": true,
+        "typeRoots": [
+            "./src/@types",
+            "./node_modules/@types"
+        ],
         "esModuleInterop": true,
+        "resolveJsonModule": true,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
-        "outDir": "dist",
-        "resolveJsonModule": true,
-        "typeRoots": ["./src/@types", "./node_modules/@types"],
-    }
+		"moduleResolution": "node",
+    },
+    "exclude": [
+        "build",
+        "node_modules",
+        "package-lock.json",
+        "package.json"
+    ]
 }
