--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,3 @@
-
 {
     "compilerOptions": {
         "target": "ES2019", 
@@ -22,6 +21,7 @@
         "build",
         "node_modules",
         "package-lock.json",
-        "package.json"
+        "package.json",
+        "test"
     ]
 }
