--- a/package.json
+++ b/package.json
@@ -12,14 +12,21 @@
 	"author": "JVOPINHO",
 	"license": "AGPL-3.0",
 	"dependencies": {
+		"apollo-server": "^3.9.0",
+		"apollo-server-core": "^3.9.0",
+		"apollo-server-express": "^3.9.0",
 		"axios": "^0.26.1",
+		"class-validator": "^0.13.2",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.0",
 		"eris": "^0.16.1",
 		"express": "^4.17.3",
 		"firebase": "8.8.1",
 		"form-data": "^4.0.0",
+		"graphql": "15.3.0",
 		"jsonwebtoken": "^8.5.1",
+		"reflect-metadata": "^0.1.13",
+		"type-graphql": "^1.1.1",
 		"ws": "^8.5.0"
 	},
 	"devDependencies": {
