--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,9 @@
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
 		"moduleResolution": "node",
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
+        "strictPropertyInitialization": false
     },
     "exclude": [
         "build",
