--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
 		"firebase": "8.8.1",
 		"form-data": "^4.0.0",
 		"graphql": "15.3.0",
+		"graphql-request": "^4.3.0",
 		"jsonwebtoken": "^8.5.1",
 		"reflect-metadata": "^0.1.13",
 		"type-graphql": "^1.1.1",
+		"winston": "^3.8.0",
 		"ws": "^8.5.0"
 	},
 	"devDependencies": {
