--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"dev": "tsc && node build/index.js",
 		"build": "tsc",
 		"start": "node build/index.js",
-		"test": "jest"
+		"test": "jest",
+		"eslint": "eslint --fix ."
 	},
 	"repository": "https://github.com/lunarybot/lunaryapi",
 	"author": "JVOPINHO",
@@ -37,6 +38,9 @@
 		"@types/jest": "^27.5.1",
 		"@types/jsonwebtoken": "^8.5.8",
 		"@types/ws": "^8.5.3",
+		"@typescript-eslint/eslint-plugin": "^5.30.5",
+		"@typescript-eslint/parser": "^5.30.5",
+		"eslint": "^8.19.0",
 		"jest": "^27.5.1",
 		"typescript": "^4.6.3"
 	}
