--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"build": "tsc",
 		"start": "node build/index.js",
 		"test": "jest",
-		"eslint": "eslint --fix ."
+		"lint": "eslint --fix ."
 	},
 	"repository": "https://github.com/lunarybot/lunaryapi",
 	"author": "JVOPINHO",
@@ -20,12 +20,8 @@
 		"class-validator": "^0.13.2",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.0",
-		"eris": "^0.16.1",
 		"express": "^4.17.3",
-		"firebase": "8.8.1",
-		"form-data": "^4.0.0",
 		"graphql": "15.3.0",
-		"graphql-request": "^4.3.0",
 		"jsonwebtoken": "^8.5.1",
 		"reflect-metadata": "^0.1.13",
 		"type-graphql": "^1.1.1",
@@ -34,7 +30,6 @@
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.13",
-		"@types/firebase": "^3.2.1",
 		"@types/jest": "^27.5.1",
 		"@types/jsonwebtoken": "^8.5.8",
 		"@types/ws": "^8.5.3",
@@ -42,6 +37,7 @@
 		"@typescript-eslint/parser": "^5.30.5",
 		"eslint": "^8.19.0",
 		"jest": "^27.5.1",
+		"prisma": "^4.2.1",
 		"typescript": "^4.6.3"
 	}
 }
