--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
 	"author": "JVOPINHO",
 	"license": "AGPL-3.0",
 	"dependencies": {
+		"@discordjs/rest": "^1.0.1",
+		"@types/express": "^4.17.13",
 		"apollo-server": "^3.9.0",
-		"apollo-server-core": "^3.9.0",
-		"apollo-server-express": "^3.9.0",
+		"apollo-server-core": "^3.10.1",
+		"apollo-server-express": "^3.10.1",
 		"axios": "^0.26.1",
 		"class-validator": "^0.13.2",
 		"cors": "^2.8.5",
+		"discord-api-types": "^0.37.3",
 		"dotenv": "^16.0.0",
-		"express": "^4.17.3",
+		"express": "^4.18.1",
 		"graphql": "15.3.0",
 		"jsonwebtoken": "^8.5.1",
 		"reflect-metadata": "^0.1.13",
@@ -29,7 +32,6 @@
 		"ws": "^8.5.0"
 	},
 	"devDependencies": {
-		"@types/express": "^4.17.13",
 		"@types/jest": "^27.5.1",
 		"@types/jsonwebtoken": "^8.5.8",
 		"@types/ws": "^8.5.3",
