--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
 	"version": "2.0.0",
 	"main": "build/index.js",
 	"scripts": {
-		"dev": "tsc && node build/index.js",
+		"dev": "tsc && TS_NODE_BASEURL=./build node -r tsconfig-paths/register .",
 		"build": "tsc",
-		"start": "node build/index.js",
+		"start": "TS_NODE_BASEURL=./build node -r tsconfig-paths/register .",
 		"test": "jest",
 		"lint": "eslint --fix ."
 	},
@@ -38,8 +38,10 @@
 		"@typescript-eslint/eslint-plugin": "^5.30.5",
 		"@typescript-eslint/parser": "^5.30.5",
 		"eslint": "^8.19.0",
+		"eslint-plugin-import-helpers": "^1.2.1",
 		"jest": "^27.5.1",
 		"prisma": "^4.2.1",
+		"tsconfig-paths": "^4.1.0",
 		"typescript": "^4.6.3"
 	}
 }
