Fixing bugs and starting resolvers and controllers

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,7 @@
             "@Apollo": ["./structures/Apollo"],
             "@BaseRouter": ["./structures/BaseRouter"],
             "@structures/*": ["./structures/*"],
+            "@models": ["./models"],
             "@utils/*": ["./utils/*"]
         }
     },
