--- a/package.json
+++ b/package.json
@@ -3,17 +3,24 @@
 	"version": "2.0.0",
 	"main": "build/index.js",
 	"scripts": {
-		"dev": "tsc && TS_NODE_BASEURL=./build node -r tsconfig-paths/register .",
 		"build": "tsc",
+		"dev": "tsc && TS_NODE_BASEURL=./build node -r tsconfig-paths/register .",
+		"lint": "eslint --fix .",
 		"start": "TS_NODE_BASEURL=./build node -r tsconfig-paths/register .",
 		"test": "jest",
-		"lint": "eslint --fix ."
+		"prisma:dev": "prisma migrate dev && prisma generate",
+		"prisma:fetch": "prisma introspect && prisma generate",
+		"prisma:format": "prisma format",
+		"prisma:generate": "prisma generate",
+		"prisma:introspect": "prisma introspect",
+		"prisma:migrate": "prisma migrate dev"
 	},
 	"repository": "https://github.com/lunarybot/lunaryapi",
 	"author": "JVOPINHO",
 	"license": "AGPL-3.0",
 	"dependencies": {
 		"@discordjs/rest": "^1.0.1",
+		"@prisma/client": "4.2.1",
 		"@types/express": "^4.17.13",
 		"apollo-server": "^3.9.0",
 		"apollo-server-core": "^3.10.1",
@@ -25,6 +32,7 @@
 		"dotenv": "^16.0.0",
 		"express": "^4.18.1",
 		"graphql": "15.3.0",
+		"ioredis": "^5.2.2",
 		"jsonwebtoken": "^8.5.1",
 		"reflect-metadata": "^0.1.13",
 		"type-graphql": "^1.1.1",
