--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,7 @@
             "@models": ["./models"],
             "@routers/*": ["./routers/*"],
             "@structures/*": ["./structures/*"],
+            "@validation": ["./utils/validation"],
             "@utils/*": ["./utils/*"]
         }
     },
