Adding `@Database/GuildPermissions`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,7 @@
         "paths": {
             "@Apollo": ["./structures/Apollo"],
             "@BaseRouter": ["./structures/BaseRouter"],
+            "@Database": ["./structures/Database"],
             "@controllers/*": ["./controllers/*"],
             "@models": ["./models"],
             "@routers/*": ["./routers/*"],
