--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"ioredis": "^5.2.2",
 		"jsonwebtoken": "^8.5.1",
 		"reflect-metadata": "^0.1.13",
+		"sydb": "^2.0.1",
 		"type-graphql": "^1.1.1",
 		"winston": "^3.8.0",
 		"ws": "^8.5.0"
